Bug/expand buttons not showing +or  (#10)
* convert some button properties to tailwind

* convert button font-weight and wrap to tailwind

* move overflow-y: scross from .modalContainer to .modal

* remove footer test

* add HideableDescriptionCellProps

---------

--- a/src/style/utils.css
+++ b/src/style/utils.css
@@ -3,19 +3,6 @@
 .hideableDescriptionCell {
   width: 100%;
 }
-
-.hideableDescriptionCell button {
-  float: right;
-  margin-left: 5px;
-  background: white;
-  border: none;
-  border-radius: 4px;
-  padding: 2px;
-  width: 20px;
-  height: 20px;
-  font-weight: bolder;
-}
-
 .hideableDescriptionCell p {
   white-space: pre-wrap;
 }
@@ -28,6 +15,7 @@
   75% 0%, 89% 30px,89% 0%,
   100% 0, 100% 100%, 0% 100%);
   max-height: 80vh;
+  overflow-y: scroll;
 }
 .modalContainer {
   z-index: 2;
@@ -37,7 +25,6 @@
   width: 400px;
   max-width: 100vw;
   max-height: 100%;
-  overflow-y: scroll;
   top: 20px;
   left: 50%;
   margin-left: -200px;
